<?xml version="1.0"?>
<package format="2">
    <name>sts_behavior_tree_client</name>
    <version>0.1.0</version>
    <description>Package to test the sts_behavior_tree as client.</description>
    <author>Nick Fiege, Sebastian Mueller</author>
    <maintainer email="nick.fiege@streetscooter.eu">Nick Fiege</maintainer>
    <maintainer email="sebastian.mueller2@streetscooter.eu">Sebastian Mueller</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_export_depend>message_runtime</build_export_depend>
    <exec_depend>message_runtime</exec_depend>

    <!-- ros dependencys -->
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

    <!-- sts dependencys -->
    <depend>sts_behavior_tree_interface</depend>
    <depend>sts_virtual_interface_msgs</depend>

</package>
