<?xml version="1.0"?>
<package format="2">
    <name>sts_behavior_tree_server</name>
    <version>0.1.0</version>
    <description>Package to test the sts_behavior_tree package.</description>
    <maintainer email="nick.fiege@streetscooter.eu">Nick Fiege</maintainer>
    <maintainer email="sebastian.mueller2@streetscooter.eu">Sebastian Mueller</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_export_depend>message_runtime</build_export_depend>
    <exec_depend>message_runtime</exec_depend>

    <!-- ros dependencys -->
    <depend>roscpp</depend>
    <depend>std_msgs</depend>


    <!-- sts dependencys -->
    <depend>sts_core_utils</depend>
    <depend>sts_bt_library</depend>
    <depend>sts_bt_visualisation</depend>

        <!--<depend>sts_behavior_tree_interface</depend>-->

    <!-- external depends -->
    <!-- <depend>OpenMP</depend> -->



</package>
